# conan-cityhash

./: .travis.yml  FindCityHash.cmake  appveyor.yml  conanfile.py
src/: CMakeLists.txt  config.h.in.cmake
test_package/: CMakeLists.txt  conanfile.py  test_cityhash.cpp
